--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,33 @@
 body {
-  background: #eee;
+  background-color: #eee;
   font-family: sans-serif;
 }
 
 .card {
-  width: 400px;
-  background: #fff;
-  margin: 16px auto;
+  background-color: white;
+  padding: 8px;
 }
 
 .title {
-  background: #e3f4ff;
+  background-color: lightcyan;
+  font-size: 16px;
+  margin-bottom: 8px;
 }
 
 .content {
-  background: #e3f4ff;
+  background-color: lightcyan;
+  margin-bottom: 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
-  background: #e3f4ff;
+  background-color: lightcyan;
+  text-align: center;
+  padding: 8px;
 }
 
 button {
-  background: white;
-  border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 8px 24 px;
 }
