--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,32 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.top {
+  display: flex;
+  justify-content: center;
+}
+
+.bottom {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.piece {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
