--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-gap: 4px;
+  grid-template-columns: 1fr 4fr;
+
 }
 
 .container div {
@@ -17,15 +21,35 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-column: 1 / 3;
+  grid-template-columns: 1fr 2fr;
+}
+
+/* .logo {
+  justify-self: start;
+} */
+
+.menu {
+  align-self: center;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
 }
 
 .sidebar {
   background-color: #C50208;
+  display: grid;
+  grid-gap: 50px;
+  grid-row: 2 / 4;
 }
 
 .sidebar .photo {
@@ -34,6 +58,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-items: center;
 }
 
 
@@ -42,10 +68,22 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  display: grid;
+  align-items: center;
 }
 
 .nav {
   background-color: #C50208;
+  display: grid;
+}
+
+.nav ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .nav ul li {
@@ -55,6 +93,9 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 15px;
 }
 
 .article p {
@@ -68,12 +109,14 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
@@ -83,6 +126,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
